connect server now only serves static files

--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,16 @@
+<!doctype html>
 <html>
 <head>
-<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script type="text/javascript"  src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="/static/socketio.js"></script>
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript"  src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+  <script type="text/javascript" src="/socketio.js"></script>
 </head>
 
 <body>
 
-<div id="content"></div>
+  <div id="content"></div>
 
+  <div id="navigation"></div>
 
-
+</body>
+</html>
