--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,13 @@
 
 <body>
 
-  <div id="content"></div>
+  <div id="content">
+    <div id="save_bar"></div>
+    <div id="content_area"></div>
+  </div>
 
-  <div id="navigation"></div>
+  <div id="navigation">Loading..</div>
+
 
 </body>
 </html>
