--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,6 @@
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="design/design.js"></script>
   <script type="text/javascript" src="/socketio.js"></script>
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 </head>
@@ -15,14 +14,20 @@
 
   <div id="back">
     <div id="content">
-      <div id="content_header"><h1>Node Wiki</h1></div>
+      <div id="content_header">
+        <h1>Node Wiki</h1>
+        <div id="edit_save_buttons">
+          <a id="edit" href="#">Edit</a>
+          <a id="save" href="#">Save</a>
+        </div>
+      </div>
+      <div id="notification"></div>
       <div id="markdown_content">
         <p>Click on a file on the left to open it</p>
       </div>
     </div>
     <div id="navigation">
-      <a href="#"><code>test.md</code></a>
-      <a href="#"><code>hello.md</code></a>
+      <code>Loading...</code>
     </div>
   </div>
 
