--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
   <script src="design/less.js" type="text/javascript"></script>
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+  <script type="text/javascript" src="/jquery.js"></script>
   <script type="text/javascript" src="/socketio.js"></script>
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 </head>
