lots of offline work done (I had no internet)

--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,9 @@
       </div>
       <div id="notification"></div>
       <div id="markdown_content">
+
+        <noscript>Sorry you need javascript for this application to work</noscript>
+
         <p>Click on a file on the left to open it</p>
       </div>
     </div>
