--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Node Wiki</title>
-  <link rel="stylesheet/less" type="text/css" href="design/css.less">
-  <script src="design/less.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="design/css.css">
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="/jquery.js"></script>
