code mirror kind of working, the cursor does not show though

--- a/static/index.html
+++ b/static/index.html
@@ -3,13 +3,14 @@
 <head>
   <title>Node Wiki</title>
   <link rel="stylesheet" type="text/css" href="design/css.css">
-  <link rel="stylesheet" type="text/css" href="codemirror2/lib/codemirror.css">
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="app.js"></script>
   <script type="text/javascript" src="codemirror2/lib/codemirror.js"></script>
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="codemirror2/mode/markdown/markdown.js"></script>
+  <link rel="stylesheet" type="text/css" href="codemirror2/lib/codemirror.css">
 </head>
 <body>
 
