added syntax highlight using highlight.js

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="design/css.css">
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="http://yandex.st/highlightjs/7.3/styles/default.min.css">
   <script type="text/javascript" src="/jquery.js"></script>
   <script type="text/javascript" src="/socketio.js"></script>
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
