more changes for responsive layout

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,9 @@
   <![endif]-->
   </head>
   <body>
+    <header>
+      <h1>Welcome to Node Wiki</h1>
+    </header>
     <div class="container">
       <div class="row row-offcanvas row-offcanvas-right">
         <div class="col-xs-12 col-sm-9">
@@ -30,7 +33,7 @@
               <div class="col-12">
                 <div id="content">
                   <div id="content_header">
-                    <h1>Node Wiki</h1>
+                    <h2>loading ...</h2>
                     <div id="edit_save_buttons">
                     </div>
                   </div>
@@ -46,17 +49,17 @@
           <div class="col-xs-6 col-sm-3 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
             <div class="list-group">
               <div id="navigation">
-                <code>Loading...</code>
+                <code>loading ...</code>
               </div>
             </div>
           </div>
       </div>
-      <hr>
-      <footer>
-        <p>Theme <a href="http://lifeload.de">lifeload.de</a></p>
-      </footer>
 
     </div><!--/.container-->
+      <footer>
+        <hr>
+        <p>powered by <a href="https://github.com/nhoss2/nodewiki">Node Wiki</a> - theme made with <span class="glyphicon glyphicon-heart" style="color:red;"></span> by <a href="http://lifeload.de">lifeload.de</a>.</p>
+      </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="js/site.js"></script>
