--- a/static/index.html
+++ b/static/index.html
@@ -32,22 +32,24 @@
           <div class="row">
               <div class="col-12">
                 <div id="content">
-                  <div id="content_header">
-                    <h2>loading ...</h2>
+                  <div id="notification">
+                  </div>
+                <div class="panel panel-default">
+                  <div id="content_header" class="panel-heading">
+                    <h2 class="panel-title">loading ...</h2>
                     <div id="edit_save_buttons">
                     </div>
                   </div>
-                  <div id="notification">
-                  </div>
-                  <div id="markdown_content">
+                  <div id="markdown_content" class="panel-body">
                     <noscript>Sorry you need javascript for this application to work</noscript>
                   </div>
-                </div>
+</div>
+                                  </div>
               </div>
             </div>
           </div>
           <div class="col-xs-6 col-sm-3 col-md-3 sidebar-offcanvas" id="sidebar" role="navigation">
-            <div class="list-group">
+                <div class="panel-nav panel panel-default">
               <div id="navigation">
                 <code>loading ...</code>
               </div>
