--- a/static/index.html
+++ b/static/index.html
@@ -60,7 +60,7 @@
     </div><!--/.container-->
       <footer>
         <hr>
-        <p>powered by <a href="https://github.com/nhoss2/nodewiki">Node Wiki</a> - theme made with <span class="glyphicon glyphicon-heart" style="color:red;"></span> by <a href="http://lifeload.de">lifeload.de</a>.</p>
+        <p>powered by<a href="https://github.com/nhoss2/nodewiki">Node Wiki</a>- theme made with <span class="glyphicon glyphicon-heart" style="color:red;"></span> by<a href="http://lifeload.de">lifeload.de</a></p>
       </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
